src/main/resources/devops/k8s_aws/istio/canery/webapp.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: webapp-risky-version
  
spec:
  selector:
    matchLabels:
      app: yoogeshWebapp
      
  replicas: 1
  
  template:
    metadata:
      name: webapp-risky-version
      labels:
        app: yoogeshWebapp
        version: risky
    spec:
      containers:
      - name: webapp-risky-version
        image: yoogesh1983/springbootsecurity:istio-risky
