src/main/resources/devops/k8s_aws/istio/canery/webApp.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: webapp
  
spec:
  selector:
    matchLabels:
      app: yoogeshWebapp
      
  replicas: 2
  
  template:
    metadata:
      name: webapp
      labels:
        app: yoogeshWebapp
        version: safe
    spec:
      containers:
      - name: webapp
        image: yoogesh1983/springbootsecurity:latest
        readinessProbe:
          httpGet:
            path: /springbootsecurity
            port: 8080
            
        resources:
          requests:
            memory: 50Mi
            cpu: 20m
        
---

apiVersion: apps/v1

kind: Deployment

metadata:
  name: webapp-risky-version
  
spec:
  selector:
    matchLabels:
      app: yoogeshWebapp
      
  replicas: 1
  
  template:
    metadata:
      name: webapp-risky-version
      labels:
        app: yoogeshWebapp
        version: risky
    spec:
      containers:
      - name: webapp-risky-version
        image: yoogesh1983/springbootsecurity:istio-risky
        readinessProbe:
          httpGet:
            path: /springbootsecurity
            port: 8080
            
        resources:
          requests:
            memory: 50Mi
            cpu: 20m
        
---

apiVersion: v1
kind: Service

metadata:
  name: twm-webapp
  
spec:
 selector:
   app: yoogeshWebapp
   
 ports:
   - name: http
     port: 80
     targetPort: 8080
     
 type: ClusterIP
