src/main/resources/devops/k8s_aws/istio/canery/canery_nodePort.yaml
# This canery canbe applied where the service is exposed outiside from the cluster. 
# Since twm-webapp is exposed outside from the cluster, this is a good candidate for this configuration if you want to pass 10% traffic on risky(canery) and 90% on the safe one

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-ingress-virtual-service-configuration
  namespace: default
spec:
  hosts:
    - "fleetman.com"
  gateways:
    - istio-ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: twm-webapp.default.svc.cluster.local
            subset: safe
          weight: 90
        - destination:
            host: twm-webapp.default.svc.cluster.local
            subset: risky
          weight: 10
