src/main/resources/devops/k8s_aws/istio/canery/destinationRule.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: twm-webapp-istio-canery-destination-configuration
  namespace: default
spec:
  host: twm-webapp.default.svc.cluster.local
  subsets:
    - labels:
        version: safe
      name: safe
    - labels:
        version: risky
      name: risky
