src/main/resources/devops/k8s_aws/istio/canery/virtualService.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: twm-webapp-istio-canery-configuration
  namespace: default
spec:
  hosts:
    - twm-webapp.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: twm-webapp.default.svc.cluster.local
            subset: safe
          weight: 100
        - destination:
            host: twm-webapp.default.svc.cluster.local
            subset: risky
          weight: 0

---

kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: twm-webapp
  namespace: default
spec:
  host: twm-webapp.default.svc.cluster.local
  subsets:
    - labels:
        version: safe
      name: safe
    - labels:
        version: risky
      name: risky
