src/main/resources/devops/k8s_aws/istio/canery/vs_canery_headerParam.yaml
apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: istio-ingress-canery-virtual-service-configuration-with-passing-parameter
  
spec:
  hosts:
    - fleetman.com
  gateways:
    - istio-ingress-firewall-yoogesh
  
  http:
  
    - match:
      - headers:
          x-istio-header:
            exact: canery
      route:
      - destination:
          host: twm-webapp.default.svc.cluster.local
          subset: risky
        
    - route: # CATCH ALL
      - destination:
          host: twm-webapp.default.svc.cluster.local
          subset: safe
