src/main/resources/devops/k8s_aws/istio/canery/webapp-stickey.yaml
apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: istio-stickey-pod-configuration
  namespace: default
  
spec:
  hosts:
    - fleetman.com
  gateways:
    - istio-ingress-firewall-yoogesh
    
  http:
  
    - match:
      - uri:
          prefix: /
          
      route:
        - destination:
            host: twm-webapp.default.svc.cluster.local
            subset: all-web-app-pods
          weight: 100
          
---
          
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: twm-webapp-istio-sticky-session-destination-configuration
  namespace: default
spec:
  host: twm-webapp.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: x-access-token
  subsets:
    - labels:
        app: yoogeshWebapp # Since We would want to select both versions, we use app instead of version here
      name: all-web-app-pods
